Extend site config params

--- a/templates/site-config.erb
+++ b/templates/site-config.erb
@@ -1,4 +1,6 @@
 [
-  %% Hostname on which this site runs
-  {hostname, "<%= @hostname %>"}
+  {hostname, "<%= @hostname %>"},
+  {dbdatabase, "<%= @db_name %>"},
+  {dbschema, "<%= @db_schema %>"},
+  {admin_password, "<%= @admin_password %>"}
 ].
