Split hostname and port

--- a/templates/site-config.erb
+++ b/templates/site-config.erb
@@ -1,5 +1,5 @@
 [
-  {hostname, "<%= @hostname %>"},
+  {hostname, "<%= @hostname %>:<%= @port %>"},
   {dbdatabase, "<%= @db_name %>"},
   {dbschema, "<%= @db_schema %>"},
   {admin_password, "<%= @admin_password %>"}
