Use site name as default db if no global db is set

--- a/templates/site-config.erb
+++ b/templates/site-config.erb
@@ -8,7 +8,7 @@
       "<%= hostalias %>"<%= ',' if i < (@hostaliases.size - 1) %>
     <% end -%>
   ]},
-  {dbdatabase, "<%= @db_name %>"},
+  {dbdatabase, "<%= @site_db_name %>"},
   {dbschema, "<%= @db_schema %>"},
   {admin_password, "<%= @admin_password %>"},
   {enabled, <%= @enabled %>}
