--- a/templates/site-config.erb
+++ b/templates/site-config.erb
@@ -13,6 +13,7 @@
       "<%= hostalias %>"<%= ',' if i < (@hostaliases.size - 1) %>
     <% end -%>
   ]},
+  {redirect, <%= @redirect %>},
   {dbdatabase, "<%= @site_db_name %>"},
   {dbschema, "<%= @db_schema %>"},
   {admin_password, "<%= @admin_password %>"},
