--- a/templates/site-config.erb
+++ b/templates/site-config.erb
@@ -1,9 +1,8 @@
 %% This file is managed by Puppet
 %%
 %% Parameters in this file will override those in sitename/config
-%% "<%= scope.lookupvar('zotonic::listen_port').class %>" "<%= @port.class %>"
 [
-<% if scope.lookupvar('zotonic::listen_port') != @port -%>
+<% if @port -%>
   {hostname, "<%= @hostname %>:<%= @port %>"},
   <% else -%>
   {hostname, "<%= @hostname %>"},
