--- a/templates/zotonic.config.erb
+++ b/templates/zotonic.config.erb
@@ -95,10 +95,16 @@
 <% end -%>
     
 %%% List with extra dependencies which get fetched and compiled by rebar
-    {deps,
+   {deps,
       [
 <% @deps.each_with_index do |(name, dep), i| -%>
-        {<%= name %>, "<%= dep['version'] %>", {git, "<%= dep['git'] %>", {tag, "<%= dep['tag'] %>"}}}<%= ',' if i < (@deps.size - 1) %>
+    {<%= name %>, "<%= dep['version'] %>", {git, "<%= dep['git'] %>",
+        <%- if dep['ref'] -%> 
+            "<%= dep['ref'] %>" 
+        <%- elsif dep['tag'] -%>
+            {tag, "<%= dep['tag'] %>"}
+        <%- end -%>
+        }}<%= ',' if i < (@deps.size - 1) %>
 <% end -%>
       ]
     }
