Increase s3filez max connections as the default is a little low

--- a/templates/erlang.config.erb
+++ b/templates/erlang.config.erb
@@ -16,6 +16,10 @@
     {dir, "priv/mnesia"}
  ]},
 
+ {s3filez, [
+    {max_connections, 2048}
+ ]},
+
  {emqtt, [
     {auth, {zotonic, []}},
     {access_control, {zotonic, []}},
