--- a/templates/erlang.config.erb
+++ b/templates/erlang.config.erb
@@ -85,6 +85,11 @@
 %%% Location of wmtrace logs (defaults to "priv/wmtrace" if not specified).
    {wmtrace_dir, "priv/log/wmtrace/"},
 
+    {filezcache, [
+        {data_dir, "priv/filezcache/data"},
+        {journal_dir, "priv/filezcache/journal"}
+    ]},
+
 %%% Which sendfile command to use: disable, yaws, erlang
    {use_sendfile, erlang}
 
